# pre-pipeline-validator

./: README.md  pyproject.toml
src/deva/: _version.py
src/deva/models/: dd_run_cerberus_validation.py  df_run_cerberus_validation.py
src/deva/models/cerberus_validation/: __init__.py  cerb_dd_validation.py  cerb_df_validation.py  dd_validation.py  df_validation.py  schema_builder.py
src/deva/resources/schemas/: data_dictionary.py
src/pre_pipeline_validator/: __init__.py  _version.py
src/pre_pipeline_validator/models/: check_registry.py  dd_run_cerberus_validation.py  df_run_cerberus_validation.py  validation_result.py
src/pre_pipeline_validator/models/cerberus_validation/: __init__.py  cerb_dd_validation.py  cerb_df_validation.py  schema_builder.py
src/pre_pipeline_validator/schemas/: example_data_dictionary.py
src/resources/examples/: dd_validation_example_response.csv  df_validation_example_response.csv  failing_datafile.csv  failing_dd.csv  passing_datafile.csv  passing_dd.csv
tests/: conftest.py  test_cerberus_validation.py  test_dd_validation.py  test_df_validation.py  test_schema_builder.py
