[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pre_pipeline_validator/_version.py"

[project]
name = "pre_pipeline_validator"
authors = [
    {name = "Brenda Gutman", email="brenda.gutman@vumc.org"}
]
description = "Data Expectations Validation Assistant"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["cerberus",
                "s3fs",
                ]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.package-data]
pre_pipeline_validator = []

[project.scripts]
validate_dd = "pre_pipeline_validator.models.dd_run_cerberus_validation:main"
validate_df = "pre_pipeline_validator.models.df_run_cerberus_validation:main"

